Add more questions.

--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
     <body>
         <div class="container">
             <div class="gamearea">
-                <h1 class="header">Totally Trivial Triva!!!</h1>
+                <h1 class="header">Totally Trivial Triva!</h1>
                 <p class="timeleft">Time Remaining: <span class="time"></span></p>
                 <strong><p class="result"></p></strong>
                 <p class="answer">The correct answer was: <strong><span class="correctanswer"></span></strong></p>
                 <p class="question"></p>
                 <ul class="choices"></ul>
                 <div class="gameresults">
-                    <p>Correct answers: <strong><span class="correctcount"></span></strong></p>
-                    <p>Incorrect answers: <strong><span class="incorrectcount"></span></strong></p>
-                    <p>Unanswered: <strong><span class="unansweredcount"></span></strong></p>
+                    <p class="gameresult">Correct answers: <strong><span class="correctcount"></span></strong></p>
+                    <p class="gameresult">Incorrect answers: <strong><span class="incorrectcount"></span></strong></p>
+                    <p class="gameresult">Unanswered: <strong><span class="unansweredcount"></span></strong></p>
                 </div>
                 <button class="playgamebutton">Play</button>
             </div>
